==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.


Breaking Changes
================

Changes
=======

Fixes
=====

 - Fix: Usage of ``DISTINCT`` in a query with a ``GROUP BY`` was producing
   wrong results and  was changed to throw UnsupportedOperationException.
   e.g.: ``SELECT DISTINCT col1 from t1 GROUP BY col2, col1``

 - Fix: An error was thrown when using ``ORDER BY count(*)`` on ``JOINS``.
   e.g.: ``SELECT count(*) from t1, t2 order by 1``

 - Fixed Admin UI ``y-axis`` number formatting for long running queries
   in the monitoring plugin.